--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -7,7 +7,8 @@ services:
     env_file:
       - .env
   web:
-    build: ../api_yamdb/
+#    build: ../api_yamdb/
+    image: 26remph/api_yamdb:v1.0.0
     restart: always
     volumes:
       - static_value:/app/static/
