--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
       - .env
   web:
 #    build: ../api_yamdb/
-    image: 26remph/api_yamdb:v1.0.0
+    image: 26remph/api_yamdb:latest
     restart: always
     volumes:
       - static_value:/app/static/
