--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -49,6 +49,7 @@ jobs:
         #cd yamdb_final/
         # запустить написанные разработчиком тесты
         pytest
+        cd api_yamdb/
 
   # Сразу после них добавьте новую задачу: деплой приложения
   build_and_push_to_docker_hub:
