--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -70,11 +70,13 @@ jobs:
             username: ${{ secrets.DOCKER_USERNAME }}
             password: ${{ secrets.DOCKER_PASSWORD }}
         - name: Push to Docker Hub
+          run: |
+          cd api_yamdb/
           # Пуш образа в Docker Hub
           uses: docker/build-push-action@v2
           with:
             push: true
-            tags: 26remph/yamdb_final:latest
+            tags: 26remph/api_yamdb:latest
 
   deploy:
       runs-on: ubuntu-latest
