--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -70,12 +70,11 @@ jobs:
             username: ${{ secrets.DOCKER_USERNAME }}
             password: ${{ secrets.DOCKER_PASSWORD }}
         - name: Push to Docker Hub
-          run: |
-            cd api_yamdb/
           # Пуш образа в Docker Hub
           uses: docker/build-push-action@v2
           with:
             push: true
+            file: ./api_yamdb/Dockerfile
             tags: 26remph/api_yamdb:latest
 
   deploy:
