--- a/yamdb_workflow.yml
+++ b/yamdb_workflow.yml
@@ -26,6 +26,7 @@ jobs:
 
   build_and_push_to_docker_hub:
       name: Push Docker image to Docker Hub
+      if: github.ref == 'refs/heads/master'
       runs-on: ubuntu-latest
       needs: tests
       steps:
@@ -58,6 +59,7 @@ jobs:
           script: |
             sudo docker-compose stop
             sudo docker-compose rm web
+            sudo docker-compose pull web
             touch .env
             echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
             echo DB_NAME=${{ secrets.DB_NAME }} >> .env
